set up basic CSS

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: whitesmoke;
+  width: 100%;
+  padding: 18px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+nav {
+  display: flex;
+  gap: 36px;
+  color: #385B4F;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+a {
+  color: whitesmoke;
+  border-bottom: 1px solid transparent;
+  text-decoration: none;
+  font-size: 20px;
 }
 
-.card {
-  padding: 2em;
+a:visited {
+  text-decoration: none;
 }
 
-.read-the-docs {
-  color: #888;
+nav > a {
+  /* color: #385B4F; */
+  font-size: 32px;
+  font-weight: bold;
 }
